# glMinimal2

./: CMakeLists.txt
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
src/: Camera.cpp  Camera.h  glad.c  main.cpp  particle.frag  particle.vert  shader.h
